--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -158,44 +158,16 @@ jobs:
           name: build-linux-musl-arm64
           path: zig-out/lib/libsodium.so
 
-  build-macos-x64:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: configure
-        run: env CFLAGS="-Ofast -arch x86_64 -mmacosx-version-min=10.15" LDFLAGS="-arch x86_64 -mmacosx-version-min=10.15" ./configure --host=arm-apple-darwin20 --prefix=$PWD/.libsodium-build
-      - name: make
-        run: make
-      - name: make check
-        run: make check
-      - name: make install
-        run: make install
-      - uses: actions/upload-artifact@v3
-        with:
-          name: build-osx-x64
-          path: .libsodium-build/lib/libsodium.dylib
-
-  build-macos-arm64:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: configure
-        run: env CFLAGS="-Ofast -arch arm64 -mmacosx-version-min=10.15" LDFLAGS="-arch arm64 -mmacosx-version-min=10.15" ./configure --host=arm-apple-darwin20 --prefix=$PWD/.libsodium-build
-      - name: make
-        run: make
-      - name: make install
-        run: make install
-      - uses: actions/upload-artifact@v3
-        with:
-          name: build-osx-arm64
-          path: .libsodium-build/lib/libsodium.dylib
-
-  build-ios-maccatalyst-arm64-and-x86_64:
+  build-mac-arm64-and-x86_64:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - name: compile
         run: $PWD/dist-build/apple-xcframework.sh
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-macos-arm64_x86_64
+          path: libsodium-apple/Clibsodium.xcframework/macos-arm64_x86_64/libsodium.a
       - uses: actions/upload-artifact@v3
         with:
           name: build-ios-maccatalyst-arm64_x86_64
@@ -211,9 +183,7 @@ jobs:
       - build-linux-musl
       - build-linux-musl-arm
       - build-linux-musl-arm64
-      - build-macos-x64
-      - build-macos-arm64
-      - build-ios-maccatalyst-arm64-and-x86_64
+      - build-mac-arm64-and-x86_64
     container:
       image: mcr.microsoft.com/dotnet/sdk:6.0
     env:
@@ -256,11 +226,11 @@ jobs:
           path: .libsodium-pack/runtimes/linux-musl-arm64/native/
       - uses: actions/download-artifact@v3
         with:
-          name: build-osx-x64
+          name: build-macos-arm64_x86_64
           path: .libsodium-pack/runtimes/osx-x64/native/
       - uses: actions/download-artifact@v3
         with:
-          name: build-osx-arm64
+          name: build-macos-arm64_x86_64
           path: .libsodium-pack/runtimes/osx-arm64/native/
       - uses: actions/download-artifact@v3
         with:
